# alibaba-dp-workload

./: .gitignore  README.md  download_alibaba_data.sh  pyproject.toml
alibaba_privacy_workload/: alibaba_trace.py  generate.py  opacus_rdp.py  privacy_workload.py  utils.py
alibaba_privacy_workload/config/: _default.yaml  example.yaml
sample_output/: privacy_tasks_30_days.cfg.yaml
